# github-review

./: .gitignore  DEBUGGING_STORAGE.md  LICENSE  LOCAL_REVIEW_API.md  README.md  test-storage.js
app/: .env.example  package-lock.json  package.json  vitest.config.ts
app/coverage/: App.tsx.html  coverage-final.json  index.html  offlineCache.ts.html  useNetworkStatus.ts.html  useScrollSync.ts.html
app/scripts/: debug-dev-server.mjs
app/src/: App.css  App.tsx  TestStorage.tsx  main.tsx  offlineCache.ts  useNetworkStatus.ts  useScrollSync.ts
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/src/: auth.rs  error.rs  github.rs  lib.rs  models.rs  review_storage.rs  storage.rs
app/src-tauri/src/tests/: error_tests.rs  github_tests.rs  mod.rs  models_tests.rs  review_storage_tests.rs  storage_tests.rs
docs/: App.tsx.md  app-src-App.tsx.md  app-src-main.tsx.md  app-src-tauri-Cargo.toml.md  app-src-tauri-src-auth.rs.md  app-src-tauri-src-error.rs.md  app-src-tauri-src-github.rs.md  app-src-tauri-src-lib.rs.md  app-src-tauri-src-models.rs.md  app-src-tauri-tauri.conf.json.md  app-tsx-refactoring-plan.md  auth.rs.md  backend-test-cases.md  frontend-test-cases.md  future-improvements.md  github.rs.md  main.rs.md  models.rs.md  offlineCache.ts.md  package.json.md  pr-comments-feature.md  review-system-logic.md  review_storage.rs.md  scroll-sync-design.md  storage.rs.md  summary.md  test-implementation-summary.md  testing-strategy.md  useNetworkStatus.ts.md
tests/scroll-sync/: .embedded-images.json  01-minimal.md  02-no-anchors-long.md  06-tables.md  (+10 more)
(+41 files in other folders)
